k8s-templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-compressor-service
  namespace: dev
spec:
  type: NodePort

  selector:
    app: image-compressor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
